--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "pinia": "^2.2.6",
     "sass": "^1.83.0",
     "vue": "^3.5.13",
+    "vue-countup-v3": "^1.4.2",
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
