--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
     "axios": "^1.8.3",
+    "dayjs": "^1.11.13",
+    "dhtmlx-gantt": "^9.0.5",
     "element-plus": "^2.9.1",
     "pinia": "^2.2.6",
     "sass": "^1.83.0",
+    "v-gantt-chart": "^1.6.3",
     "vue": "^3.5.13",
     "vue-countup-v3": "^1.4.2",
     "vue-router": "^4.4.5"
